[vm options] refactor the way how VM options are constructed for the IDE process (for dev IDEA and tests) (#SCL-24313, #SCL-23540) fixed